# gdv2-exercise-1

./: .clang-format  .gitignore  CMakeLists.txt
include/: OctreeNode.h  TupleHash.h  VolumeVisualisation.h
include/gris/: BoundingBox.h  Camera.h  GridCell.h  TriangeMesh.h  VolumeData.h  mc_look_up.h  util.h
include/ui/: LoadDialog.h  MainWindow.h  RenderWidget.h  SettingsWidget.h
src/: VolumeVisualisation.cpp  main.cpp
src/gris/: Camera.cpp  TriangleMesh.cpp  VolumeData.cpp
src/ui/: LoadDialog.cpp  MainWindow.cpp  RenderWidget.cpp  SettingsWidget.cpp
ui/: LoadDialog.ui  MainWindow.ui  SettingsWidget.ui
